Upgraded Quarkus and JDK25