@@ -7,34 +7,33 @@
     <parent>
         <groupId>com.github.tess1o</groupId>
         <artifactId>GeoPulse</artifactId>
-        <version>1.0.0-rc.18</version>
+        <version>1.0.0-rc.19</version>
     </parent>
     <artifactId>backend</artifactId>
 
     <properties>
         <compiler-plugin.version>3.11.0</compiler-plugin.version>
-        <maven.compiler.release>23</maven.compiler.release>
+        <maven.compiler.release>25</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.21.4</quarkus.platform.version>
+        <quarkus.platform.version>3.28.2</quarkus.platform.version>
         <skipITs>true</skipITs>
-        <surefire-plugin.version>3.1.2</surefire-plugin.version>
-        <jts-core.version>1.19.0</jts-core.version>
-        <lombok.version>1.18.38</lombok.version>
-        <hibernate-spatial.version>6.6.13.Final</hibernate-spatial.version>
-        <junit-jupiter.version>5.10.0</junit-jupiter.version>
-        <jjwt.version>0.9.1</jjwt.version>
-        <hibernate-types-60.version>2.21.1</hibernate-types-60.version>
-        <mapstruct.version>1.6.3</mapstruct.version>
+        <surefire-plugin.version>3.5.4</surefire-plugin.version>
+        <jts-core.version>1.20.0</jts-core.version>
+        <lombok.version>1.18.42</lombok.version>
         <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
-        <jjwt-api.version>0.11.2</jjwt-api.version>
-        <testcontainers.version>1.19.7</testcontainers.version>
-        <pmd.version>7.12.0</pmd.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
+        <hibernate-spatial.version>7.1.2.Final</hibernate-spatial.version>
+        <junit-jupiter.version>6.0.0</junit-jupiter.version>
+        <jjwt-api.version>0.13.0</jjwt-api.version>
+        <testcontainers.version>1.21.3</testcontainers.version>
+        <pmd.version>7.17.0</pmd.version>
         <maven-pmd-plugin.version>3.26.0</maven-pmd-plugin.version>
         <org.eclipse.paho.client.mqttv3.version>1.2.5</org.eclipse.paho.client.mqttv3.version>
-        <langchain4j.version>1.5.0</langchain4j.version>
+        <langchain4j.version>1.7.1</langchain4j.version>
+        <hypersistence-utils-hibernate-71.version>3.11.0</hypersistence-utils-hibernate-71.version>
     </properties>
 
     <dependencyManagement>
@@ -151,9 +150,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.vladmihalcea</groupId>
-            <artifactId>hibernate-types-60</artifactId> <!-- use -55 if you're on Hibernate 5.5 -->
-            <version>${hibernate-types-60.version}</version>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-71</artifactId>
+            <version>${hypersistence-utils-hibernate-71.version}</version>
         </dependency>
 
         <!-- Validation dependencies -->
@@ -332,6 +331,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-plugin.version}</version>
                 <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                     <systemPropertyVariables>
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <maven.home>${maven.home}</maven.home>
